# mini-pyrometheus

./: .gitignore  README.rst  pyproject.toml
examples/: ad_demo.py  gpu_demo.py
minipyro/: __init__.py  chem_expr.py  symbolic.py
minipyro/codegen/: fortran.py  mappers.py  python.py
minipyro/pyro_np/: adiff_np.py  lazy_np.py  loopy.py
