[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name    = "minipyro"
version = "1.0.0"
readme  = "README.rst"
authors = [
  { name="Esteban Cisneros",  email="ecisnerosg88@gmail.com" },
]
description = "Code generation for combustion thermochemistry, for demonstration only."
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators"
]
dependencies = [
    "cantera",
    "mako",
]

[project.urls]
Source = "https://github.com/ecisneros8/mini-pyrometheus"
Issues = "https://github.com/ecisneros8/mini-pyrometheus/issues"

[tool.flake8]
ignore = [
    "E126", "E127", "E128", "E123", "E226",
    "E241", "E242", "E265", "E402", "W503",
    "E731",
]
max-line-length = 85
exclude = ["pytools/arithmetic_container.py", "pytools/decorator.py", "build"]
inline-quotes = '"'
docstring-quotes = '"'
multiline-quotes = '"""'
